Se agrega el metodo para consultar las novedades para un contrato segun su tipo.
