# routers/commentsRouter_controllers.go
@@ -17,9 +17,9 @@ func init() {
 
 	beego.GlobalControllerRouter["argo_api/controllers:ActainicioController"] = append(beego.GlobalControllerRouter["argo_api/controllers:ActainicioController"],
 		beego.ControllerComments{
-			Method: "Get",
-			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"get"},
+			Method: "Post",
+			Router: `/`,
+			AllowHTTPMethods: []string{"post"},
 			MethodParams: param.Make(),
 			Params: nil})
 
@@ -33,17 +33,17 @@ func init() {
 
 	beego.GlobalControllerRouter["argo_api/controllers:ActainicioController"] = append(beego.GlobalControllerRouter["argo_api/controllers:ActainicioController"],
 		beego.ControllerComments{
-			Method: "Delete",
+			Method: "Get",
 			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"delete"},
+			AllowHTTPMethods: []string{"get"},
 			MethodParams: param.Make(),
 			Params: nil})
 
 	beego.GlobalControllerRouter["argo_api/controllers:ActainicioController"] = append(beego.GlobalControllerRouter["argo_api/controllers:ActainicioController"],
 		beego.ControllerComments{
-			Method: "Post",
-			Router: `/`,
-			AllowHTTPMethods: []string{"post"},
+			Method: "Delete",
+			Router: `/:objectId`,
+			AllowHTTPMethods: []string{"delete"},
 			MethodParams: param.Make(),
 			Params: nil})
 
@@ -65,9 +65,9 @@ func init() {
 
 	beego.GlobalControllerRouter["argo_api/controllers:NovedadController"] = append(beego.GlobalControllerRouter["argo_api/controllers:NovedadController"],
 		beego.ControllerComments{
-			Method: "Get",
-			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"get"},
+			Method: "Post",
+			Router: `/`,
+			AllowHTTPMethods: []string{"post"},
 			MethodParams: param.Make(),
 			Params: nil})
 
@@ -81,17 +81,25 @@ func init() {
 
 	beego.GlobalControllerRouter["argo_api/controllers:NovedadController"] = append(beego.GlobalControllerRouter["argo_api/controllers:NovedadController"],
 		beego.ControllerComments{
-			Method: "Delete",
-			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"delete"},
+			Method: "GetCVT",
+			Router: `/:contrato/:vigencia/:tiponovedad`,
+			AllowHTTPMethods: []string{"get"},
 			MethodParams: param.Make(),
 			Params: nil})
 
 	beego.GlobalControllerRouter["argo_api/controllers:NovedadController"] = append(beego.GlobalControllerRouter["argo_api/controllers:NovedadController"],
 		beego.ControllerComments{
-			Method: "Post",
-			Router: `/`,
-			AllowHTTPMethods: []string{"post"},
+			Method: "Get",
+			Router: `/:objectId`,
+			AllowHTTPMethods: []string{"get"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["argo_api/controllers:NovedadController"] = append(beego.GlobalControllerRouter["argo_api/controllers:NovedadController"],
+		beego.ControllerComments{
+			Method: "Delete",
+			Router: `/:objectId`,
+			AllowHTTPMethods: []string{"delete"},
 			MethodParams: param.Make(),
 			Params: nil})
 
@@ -113,6 +121,14 @@ func init() {
 
 	beego.GlobalControllerRouter["argo_api/controllers:TiponovedadController"] = append(beego.GlobalControllerRouter["argo_api/controllers:TiponovedadController"],
 		beego.ControllerComments{
+			Method: "Post",
+			Router: `/`,
+			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["argo_api/controllers:TiponovedadController"] = append(beego.GlobalControllerRouter["argo_api/controllers:TiponovedadController"],
+		beego.ControllerComments{
 			Method: "Get",
 			Router: `/:objectId`,
 			AllowHTTPMethods: []string{"get"},
@@ -124,14 +140,6 @@ func init() {
 			Method: "Delete",
 			Router: `/:objectId`,
 			AllowHTTPMethods: []string{"delete"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["argo_api/controllers:TiponovedadController"] = append(beego.GlobalControllerRouter["argo_api/controllers:TiponovedadController"],
-		beego.ControllerComments{
-			Method: "Post",
-			Router: `/`,
-			AllowHTTPMethods: []string{"post"},
 			MethodParams: param.Make(),
 			Params: nil})
 
